@@ -57,9 +57,30 @@
     if(!$participating && count($cal_info->participants) == 1) {
       $cal_info->owner = $cal_info->participants[0];
     }
+    if ($phpgw_info["user"]["preferences"]["common"]["timeformat"] == "12") {
+      if ($cal_info->ampm == "pm" && $cal_info->hour <> 12) {
+	$cal_info->hour += 12;
+      }
+      if ($cal_info->end_ampm == "pm" && $cal_info->end_hour <> 12) {
+	$cal_info->end_hour += 12;
+      }
+    }
+    $cal_info->datetime = mktime($cal_info->hour,$cal_info->minute,0,$cal_info->month,$cal_info->day,$cal_info->year) - ((60 * 60) * $phpgw_info["user"]["preferences"]["common"]["tz_offset"]);
+    $cal_info->edatetime = mktime($cal_info->end_hour,$cal_info->end_minute,0,$cal_info->end_month,$cal_info->end_day,$cal_info->end_year) - ((60 * 60) * $phpgw_info["user"]["preferences"]["common"]["tz_offset"]);
+    $cal_info->rpt_end = mktime(12,0,0,$cal_info->rpt_month,$cal_info->rpt_day,$cal_info->rpt_year) - ((60 * 60) * $phpgw_info["user"]["preferences"]["common"]["tz_offset"]);
     $phpgw->common->appsession($cal_info);
     $datetime_check = validate($cal_info);
-    $overlapping_events = $phpgw->calendar->overlap($cal_info->month,$cal_info->day,$cal_info->year,$cal_info->hour,$cal_info->minute,$cal_info->ampm,$cal_info->end_month,$cal_info->end_day,$cal_info->end_year,$cal_info->end_hour,$cal_info->end_minute,$cal_info->end_ampm,$cal_info->participants,$cal_info->owner,$cal_info->id);
+    if ($phpgw_info["user"]["preferences"]["common"]["timeformat"] == "12") {
+      if ($cal_info->hour >= 12) {
+	$cal_info->ampm = "";
+      }
+      if ($cal_info->end_hour >= 12) {
+	$cal_info->end_ampm = "";
+      }
+    }
+    $cal_info->datetime += ((60 * 60) * $phpgw_info["user"]["preferences"]["common"]["tz_offset"]);
+    $cal_info->edatetime += ((60 * 60) * $phpgw_info["user"]["preferences"]["common"]["tz_offset"]);
+    $overlapping_events = $phpgw->calendar->overlap($cal_info->datetime,$cal_info->edatetime,$cal_info->participants,$cal_info->groups,$cal_info->owner,$cal_info->id);
   } else {
     $cal_info = $phpgw->common->appsession();
   }
@@ -76,13 +97,13 @@
 
     $phpgw->template->set_var("color",$phpgw_info["theme"]["bg_text"]);
 
-    $time = $phpgw->calendar->fixtime($cal_info->hour,$cal_info->minute,$cal_info->ampm);
     $calendar_overlaps = $phpgw->calendar->getevent($overlapping_events);
 
+    $format = $phpgw_info["user"]["preferences"]["common"]["dateformat"] . " - ";
     if ($phpgw_info["user"]["preferences"]["common"]["timeformat"] == "12") {
-      $format = "h:i:s a";
+      $format .= "h:i:s a";
     } else {
-      $format = "H:i:s";
+      $format .= "H:i:s";
     }
 
     $overlap = "";
@@ -94,11 +115,11 @@
 	  $overlap .= "(PRIVATE)";
 	else
 	  $overlap .= $phpgw->calendar->link_to_entry($cal_over->id,"circle.gif",$cal_over->name);
-	$overlap .= " (".$phpgw->common->show_date($cal_over->datetime,$format)." - ".$phpgw->common->show_date($cal_over->edatetime,$format).")<br>";
+	$overlap .= " (".$phpgw->common->show_date($cal_over->datetime)." - ".$phpgw->common->show_date($cal_over->edatetime).")<br>";
       }
     }
     if(strlen($overlap)) {
-      $phpgw->template->set_var("overlap_text",lang("Your suggested time of <B> x - x </B> conflicts with the following existing calendar entries:",$phpgw->calendar->build_time_for_display($time),$phpgw->calendar->build_time_for_display($phpgw->calendar->addduration($cal_info->hour,$cal_info->minute,$cal_info->ampm,$cal_info->duration))));
+      $phpgw->template->set_var("overlap_text",lang("Your suggested time of <B> x - x </B> conflicts with the following existing calendar entries:",date($format,$cal_info->datetime),date($format,$cal_info->edatetime)));
       $phpgw->template->set_var("overlap_list",$overlap);
     } else {
       $phpgw->template->set_var("overlap_text","");
