@@ -78,7 +78,7 @@
   $phpgw->template->set_var("small_calendar_next",$phpgw->calendar->pretty_small_calendar($thisday,$next["month"],$next["year"],"day.php"));
   $phpgw->template->set_var("large_month",$phpgw->calendar->display_large_month($thismonth,$thisyear,True,$owner));
   if (!$friendly) {
-    $param = "year=".$now["year"]."&month=".$now["month"]."&friendly=1";
+    $param = "year=".$now["year"]."&month=".$now["month"]."&friendly=1&filter=".$filter;
     $phpgw->template->set_var("print","<a href=\"".$phpgw->link($PHP_SELF,$param)."\" TARGET=\"cal_printer_friendly\" onMouseOver=\"window."
 	   . "status = '" . lang("Generate printer-friendly version"). "'\">[". lang("Printer Friendly") . "]</a>");
     $phpgw->template->parse("out","index_t");
